# poly_l10n

./: Cargo.toml  README.md
src/: default_rulebook.rs  getlang.rs  lib.rs  macros.rs  per_lang_default_rules.rs
src/getlang/: windows.rs
