[package]
name = "poly_l10n"
version = "0.0.6"
edition = "2024"
description = "Handle locali(s|z)ations the correct way"
license = "GPL-3.0-or-later"
repository = "https://github.com/madonuko/poly_l10n"
readme = "README.md"
keywords = ["i18n", "l10n", "localization", "internationalization", "locale"]
categories = ["accessibility", "internationalization", "localization"]
documentation = "https://docs.rs/poly_l10n/"

[dependencies]
isolang = { version = "2.4.0", default-features = false }
itertools = { version = "0.14.0" }
preinterpret = { version = "0.2.0", optional = true }
tracing = { version = "0.1.41", default-features = false, optional = true }
unic-langid = "0.9.5"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = ["Win32_Globalization"]
optional = true

[features]
default = ["tracing", "per_lang_default_rules", "getlang"]
tracing = ["dep:tracing"]
per_lang_default_rules = ["dep:preinterpret"]
getlang = ["dep:windows"]

[package.metadata."docs.rs"]
all-features = true

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

disallowed-macros = "deny"
excessive-nesting = "warn"

arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
field_scoped_visibility_modifiers = "deny"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
infinite_loop = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unwrap_in_result = "warn"
